<resources>
    <string name="app_name">Cookbook</string>

    <string name="Potato">Patata</string>
    <string name="Tomato">Tomate</string>
    <string name="Rice">Arroz</string>
    <string name="Onion">Cebolla</string>
    <string name="Milk">Leche</string>
    <string name="Egg">Huevo</string>
    <string name="Bean">Judias</string>
    <string name="Tune">Atun</string>
    <string name="Paste">Pasta</string>
    <string name="Bread">Pan</string>

    <string name="FindButton">Buscar</string>
    <string name="CreateButton">Crear</string>
    <string name="CreateNotification">Receta añadida</string>
    <string name="CreateError">Rellena todos los campos</string>
</resources>
