<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cookbook"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.oscar.cookbook.CookbookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox6"
                android:text="@string/Potato" />

            <CheckBox
                android:text="@string/Rice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox5" />

            <CheckBox
                android:text="@string/Tomato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox4" />

            <CheckBox
                android:text="@string/Oil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox3" />

            <CheckBox
                android:text="@string/Milk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2" />

            <CheckBox
                android:text="@string/Bean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox" />



        </LinearLayout>
    </ScrollView>
    <Button
        android:text="@string/FindButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_marginTop="30dp"
        android:onClick="onClick" />
</LinearLayout>
</RelativeLayout>
